# atm

./: Cargo.toml  README.md  build.rs  io.aosc.atm.apply.policy
.github/workflows/: ci.yml
i18n/en-US/: atm.ftl
i18n/zh-CN/: atm.ftl
src/: i18n.rs  main.rs  network.rs  parser.rs  pm.rs
src/desktop/: kde5.rs  mod.rs
src/frontend/: cli.rs  mod.rs  tui.rs
src/pk/: mod.rs  packagekit.rs  packagekit_tx.rs
src/solv/: ffi.rs  mod.rs
