[package]
name = "atm"
version = "0.6.2"
authors = ["liushuyu <liushuyu011@gmail.com>"]
edition = "2018"


[dependencies]
anyhow = "1.0"
time = { version = "0.3", features = ["formatting", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.5"
reqwest = { version = "0.12", features = ["json"] }
winnow = "0.7"
nix = { version = "0.29", features = ["user"] }
tempfile = "3.19"
sha2 = "0.10"
# tui
cursive = { version = "0.21", features = ["crossterm-backend"], default-features = false }
cursive_table_view = "0.15"
cursive-async-view = "0.8"
indexmap = { version = "^2", features = ["serde"] }
dashmap = "^6"
# cli
argh = "0.1"
tabwriter = "^1"
# packagekit related
zbus = { version = "^5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs", "process"] }
futures = "0.3"
# i18n
i18n-embed = { version = "0.15", features = ["fluent-system", "desktop-requester"]}
i18n-embed-fl = "0.9"
rust-embed = "^8"
unic-langid = "0.9"

[profile.release]
lto = true
